--- a/uk/privacy/index.html
+++ b/uk/privacy/index.html
@@ -1,6 +1,45 @@
 <!doctype html>
 <html lang="uk"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- THEME PACK — вставити після <meta charset> -->
+<script>
+(function(){
+  try{
+    var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
+    var darkOS=window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches;
+    var theme= pref==='auto' ? (darkOS?'dark':'light') : pref;
+    document.documentElement.setAttribute('data-theme', theme);
+    document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
+  }catch(e){}
+})();
+</script>
+
+<style>
+:root{ --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
+  --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
+  --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280; }
+[data-theme="dark"]{ --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
+  --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
+  --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa; }
+body{ background:var(--bg); color:var(--text); }
+</style>
+
+<link id="favicon" rel="icon" type="image/svg+xml" href="">
+<script>
+(function(){
+  function setFavicon(hex){
+    var svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+hex+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
+    var url='data:image/svg+xml,'+encodeURIComponent(svg);
+    var link=document.getElementById('favicon'); if(link) link.href=url;
+  }
+  try{
+    var cs=getComputedStyle(document.documentElement);
+    var textColor=cs.getPropertyValue('--text').trim()||'#0c1220';
+    setFavicon(textColor);
+  }catch(e){}
+})();
+</script>
+<!-- /THEME PACK -->
 <title>Політика конфіденційності — Presidency Clock</title>
 <link rel="canonical" href="https://presidencyclock.com/uk/privacy/">
 <meta name="description" content="Політика конфіденційності Presidency Clock: файли cookie, реклама Google AdSense, дані та контакти.">
