--- a/uk/about/index.html
+++ b/uk/about/index.html
@@ -1,63 +1,197 @@
 <!doctype html>
 <html lang="uk" data-theme="auto">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <!-- THEME PACK -->
-<script>
-(function(){
-  try{
-    var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
-    var darkOS=window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches;
-    var theme=pref==='auto'?(darkOS?'dark':'light'):pref;
-    document.documentElement.setAttribute('data-theme',theme);
-    document.documentElement.style.colorScheme=(theme==='dark'?'dark':'light');
-    if(pref==='auto'&&window.matchMedia){
-      window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change',function(e){
-        var t=e.matches?'dark':'light';
-        document.documentElement.setAttribute('data-theme',t);
-        document.documentElement.style.colorScheme=(t==='dark'?'dark':'light');
-      });
-    }
-  }catch(e){}
-})();
-</script>
+  <meta charset="utf-8">
 
-<style>
-:root{ --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
-  --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
-  --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280; }
-[data-theme="dark"]{ --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
-  --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
-  --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa; }
-body{ background:var(--bg); color:var(--text); }
-</style>
-<!-- /THEME PACK -->
-  <title>Про сайт — Presidency Clock</title>
-  <link rel="canonical" href="https://presidencyclock.com/uk/about/">
-  <meta name="description" content="Presidency Clock — простий лічильник до завершення каденції президента США. Цей таймер — нагадування, що час для важливих, історичних рішень спливає все більше.">
+  <!-- THEME PACK (фікс теми — вставлено у <head>, спрацьовує ДО рендеру) -->
+  <script>
+  (function(){
+    try{
+      var pref=(localStorage.getItem('theme')||'auto').toLowerCase();
+      var darkOS=window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme = pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
+      // якщо обрано "авто" — реагуємо на зміну теми ОС
+      if(pref==='auto' && window.matchMedia){
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function(e){
+          var t=e.matches?'dark':'light';
+          document.documentElement.setAttribute('data-theme', t);
+          document.documentElement.style.colorScheme = (t==='dark'?'dark':'light');
+          if(window.updateFavicon) updateFavicon();
+        });
+      }
+    }catch(e){}
+  })();
+  </script>
+
   <style>
-    body{margin:0;background:#f6f8fd;color:#0c1220;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-    .wrap{max-width:900px;margin:28px auto;padding:0 14px}
-    .brand{position:fixed;left:12px;top:10px}
-    .topnav{display:flex;gap:.6rem;justify-content:center;flex-wrap:wrap;margin:42px auto 14px}
-    .topnav a{color:inherit;text-decoration:none;font-weight:700;border:1px solid rgba(13,17,23,.12);background:#fff;padding:.4rem .7rem;border-radius:999px}
-    .topnav a:hover{transform:translateY(-1px)}
-    a{color:#3d77ff;text-decoration:none} a:hover{text-decoration:underline}
-    footer{opacity:.75;text-align:center;margin:18px 0}
+  /* Токени кольорів (обидві теми) */
+  :root{
+    --bg:#f6f8fd; --stripe:rgba(13,17,23,.06); --surface:#fff; --tile-bg:#f3f5fa; --btn-bg:#fff;
+    --line:rgba(13,17,23,.12); --text:#0c1220; --num:#0f1720; --accent:#3d77ff;
+    --glow1:rgba(68,118,255,.28); --glow2:rgba(255,160,62,.16); --muted:#6b7280;
+  }
+  [data-theme="dark"]{
+    --bg:#000; --stripe:rgba(255,255,255,.08); --surface:rgba(255,255,255,.06); --tile-bg:rgba(255,255,255,.05);
+    --btn-bg:rgba(255,255,255,.06); --line:rgba(255,255,255,.16); --text:#f2f5ff; --num:#fff; --accent:#8ab8ff;
+    --glow1:rgba(78,128,255,.20); --glow2:rgba(255,120,0,.08); --muted:#a1a1aa;
+  }
+
+  /* Базова сітка/типографіка */
+  html,body{height:100%}
+  body{
+    margin:0; color:var(--text); background:var(--bg);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    background-image:
+      radial-gradient(900px 480px at 78% 18%, var(--glow1), transparent 60%),
+      radial-gradient(700px 420px at 20% 90%, var(--glow2), transparent 65%),
+      repeating-linear-gradient(to bottom, var(--stripe) 0, var(--stripe) 1px, transparent 1px, transparent 24px);
+    background-attachment:fixed,fixed,fixed;
+  }
+  .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 32px}
+  a{color:var(--accent);text-decoration:none}
+  a:hover{text-decoration:underline}
+
+  /* Хедер і перемикач теми */
+  .topbar{display:flex;align-items:center;justify-content:space-between;gap:.75rem;margin:8px 0 16px}
+  .brand{display:flex;align-items:center;gap:.5rem}
+  .brand__logo{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line)}
+  .brand__logo svg{width:20px;height:20px;color:var(--text)}
+  .brand__title{font-weight:800}
+
+  .theme{position:relative}
+  .theme__btn{
+    display:inline-flex;align-items:center;gap:.35rem;
+    background:var(--btn-bg); border:1px solid var(--line); color:var(--text);
+    padding:6px 10px; border-radius:10px; font-weight:700; cursor:pointer;
+  }
+  .theme__menu{
+    position:absolute; right:0; top:40px; min-width:160px; background:var(--surface);
+    border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12);
+    display:none; padding:6px; z-index:20;
+  }
+  .theme__menu.open{display:block}
+  .theme__opt{
+    display:flex;align-items:center;gap:.5rem; padding:8px 10px; border-radius:8px; cursor:pointer; user-select:none;
+  }
+  .theme__opt:hover{background:var(--tile-bg)}
+  .badge{font-size:12px;opacity:.75}
+
+  /* Контентні блоки */
+  main h1{font-weight:800;margin:8px 0 6px}
+  .card{background:var(--surface);border:1px solid var(--line);border-radius:18px;padding:14px;margin:10px 0}
+  nav.card a{margin-right:10px}
   </style>
+
+  <!-- Фавікон під тему -->
+  <link id="favicon" rel="icon" type="image/svg+xml" href="">
+  <script>
+  function updateFavicon(){
+    try{
+      var textColor=getComputedStyle(document.documentElement).getPropertyValue('--text').trim()||'#0c1220';
+      var svg="<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='none' stroke='"+textColor+"' stroke-width='6' stroke-linecap='round' stroke-linejoin='round'><circle cx='32' cy='32' r='24'/><path d='M32 14v18l12 8'/></svg>";
+      var url='data:image/svg+xml,'+encodeURIComponent(svg);
+      var link=document.getElementById('favicon'); if(link) link.href=url;
+    }catch(e){}
+  }
+  (function(){ updateFavicon(); })();
+  </script>
+  <!-- /THEME PACK -->
+
+  <!-- Метадані сторінки (онови під себе) -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <title>Назва сторінки — Presidency Clock</title>
+  <meta name="description" content="Короткий опис сторінки українською.">
+  <meta name="theme-color" content="#f6f8fd">
 </head>
 <body>
-  <div class="brand"><a href="/uk/" aria-label="На головну">← На головну</a></div>
-  <nav class="topnav" aria-label="Меню">
-    <a href="/uk/">Головна</a><a href="/uk/about/">Про сайт</a><a href="/uk/presidents/">Президенти</a>
-    <a href="/uk/digest/">Дайджести</a><a href="/uk/privacy/">Політика</a><a href="/uk/contact/">Контакти</a>
-  </nav>
-  <main class="wrap">
-    <h1>Про сайт</h1>
-    <p><strong>Presidency Clock</strong> — інформаційний лічильник у межах законодавства США. Сайт існує виключно для інформування.</p>
-    <p>Цей таймер — нагадування, що час для важливих, історичних рішень спливає все більше.</p>
-    <p>Зв’язок: <a href="mailto:presidencyclock@gmail.com">presidencyclock@gmail.com</a></p>
-  </main>
-  <footer><a href="/uk/privacy/">Політика конфіденційності</a> • <a href="/uk/contact/">Контакти</a></footer>
+  <div class="wrap">
+    <!-- Верхня панель з перемикачем теми (вставляй на ВСІХ сторінках UA) -->
+    <div class="topbar">
+      <div class="brand">
+        <a class="brand__logo" href="/uk/" aria-label="Presidency Clock">
+          <svg viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
+        </a>
+        <div class="brand__title">Presidency&nbsp;Clock</div>
+      </div>
+
+      <!-- Перемикач теми (працює будь-де) -->
+      <div class="theme" id="themeBox">
+        <button class="theme__btn" id="themeBtn" aria-haspopup="true" aria-expanded="false">
+          <span id="themeLabel">Тема: авто</span>
+        </button>
+        <div class="theme__menu" id="themeMenu" role="menu" aria-label="Перемикач теми">
+          <div class="theme__opt" data-value="auto"  role="menuitem">Авто <span class="badge">за темою ОС</span></div>
+          <div class="theme__opt" data-value="light" role="menuitem">Світла</div>
+          <div class="theme__opt" data-value="dark"  role="menuitem">Темна</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Навігація (онови посилання під себе) -->
+    <nav class="card" aria-label="Основна навігація">
+      <a href="/uk/">Головна</a>
+      <a href="/uk/presidents/">Президенти</a>
+      <a href="/uk/digest/">Дайджести</a>
+      <a href="/uk/about/">Про сайт</a>
+      <a href="/uk/privacy/">Приватність</a>
+      <a href="/uk/contact/">Контакти</a>
+    </nav>
+
+    <!-- ТВОЙ КОНТЕНТ: заміни вміст main на потрібний текст/розмітку -->
+    <main>
+      <h1>Заголовок сторінки</h1>
+      <div class="card">
+        Це приклад UA-сторінки зі справною темою і перемикачем. Скопіюй цей файл та використай як основу для інших сторінок.
+        Вибір теми зберігається і застосовується на всіх сторінках без миготіння.
+      </div>
+    </main>
+  </div>
+
+  <!-- Логіка перемикача теми -->
+  <script>
+  (function(){
+    var btn  = document.getElementById('themeBtn');
+    var menu = document.getElementById('themeMenu');
+    var lab  = document.getElementById('themeLabel');
+
+    function currentPref(){ return (localStorage.getItem('theme')||'auto').toLowerCase(); }
+    function labelFrom(pref){ return pref==='auto' ? 'авто' : (pref==='light'?'світла':'темна'); }
+
+    function applyTheme(pref){
+      localStorage.setItem('theme', pref);
+      var darkOS = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      var theme  = pref==='auto' ? (darkOS?'dark':'light') : pref;
+      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.style.colorScheme = (theme==='dark'?'dark':'light');
+      lab.textContent = 'Тема: ' + labelFrom(pref);
+      updateFavicon && updateFavicon();
+    }
+    function toggleMenu(open){
+      var willOpen = (open!==undefined ? open : !menu.classList.contains('open'));
+      menu.classList.toggle('open', willOpen);
+      btn.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
+    }
+
+    // ініціалізуємо напис на кнопці і тему
+    lab.textContent = 'Тема: ' + labelFrom(currentPref());
+    applyTheme(currentPref());
+
+    btn.addEventListener('click', function(e){ e.preventDefault(); toggleMenu(); });
+    menu.querySelectorAll('.theme__opt').forEach(function(opt){
+      opt.addEventListener('click', function(){
+        applyTheme(this.getAttribute('data-value')); toggleMenu(false);
+      });
+    });
+    document.addEventListener('click', function(e){
+      if(!menu.contains(e.target) && !btn.contains(e.target)) toggleMenu(false);
+    });
+    document.addEventListener('keydown', function(e){ if(e.key==='Escape') toggleMenu(false); });
+
+    // зробимо глобальний API, якщо колись захочеш кнопки в іншому місці:
+    window.__setTheme = applyTheme;  // приклад: __setTheme('dark')
+  })();
+  </script>
 </body>
 </html>
